--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@ How to play:
   <ul>
     <li>Press Space to jump.</li>
     <li>The longer you hold down space, the higher you jump.</li>
+    <li>Use the left and right arrow keys to move while you're jumping.</li>
   <ul>
 
    <script type="text/javascript" src="bower_components/excalibur/dist/Excalibur.js"></script>
