--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 How to play:
   <ul>
+    <li>Try to jump and hit as many green blocks as possible.</li>
     <li>Press Space to jump.</li>
     <li>The longer you hold down space, the higher you jump.</li>
     <li>Use the left and right arrow keys to move while you're jumping.</li>
@@ -29,7 +30,6 @@ How to play:
       scoreLabel.color = ex.Color.Red;
 
       var chargeBars = [];
-
 
       jumper.rise = function(amount){
         jumper.y -= amount;
