Add touch event

--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@ How to play:
         endCharge();
       };
 
-      ex.TouchDown = function(evt){
+      ex.TouchStart = function(evt){
         startCharge();
       };
 
-      ex.TouchUp = function(evt){
+      ex.TouchEnd = function(evt){
         endCharge();
       };
 
