Fine tune mobile version

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </ul>
 
   <div>
-    Playing on an iphone? <a href="/mobile.html">Check out the mobile version</a>
+    Playing on an iphone? <a href="/Excalibur-Jumper/mobile.html">Check out the mobile version</a>
   </div>
   <br>
 
