Move game logic to separate js files.

--- a/index.html
+++ b/index.html
@@ -10,178 +10,14 @@
   </ul>
 
   <div>
-    Playing on an iphone? <a href="/Excalibur-Jumper/mobile.html">Check out the mobile version</a>
+    Playing on an iphone? Check out the <a href="/Excalibur-Jumper/mobile.html">mobile version</a>.
   </div>
   <br>
 
-   <script type="text/javascript" src="bower_components/excalibur/dist/Excalibur.js"></script>
-   <script type="text/javascript">
-      var game = new ex.Engine(320, 480);
-      game.backgroundColor = ex.Color.Black;
-      var Goal = ex.Actor.extend({});
-
-      var JUMPER_HEIGHT = 20;
-      var JUMPER_WIDTH = 20;
-      var ground = new ex.Actor(0, game.height - 100, game.width, 5, ex.Color.Yellow);
-      ground.preventCollisions = true;
-      var jumper = new ex.Actor(game.width / 2 - JUMPER_WIDTH / 2, ground.y, JUMPER_WIDTH, JUMPER_HEIGHT, ex.Color.Red);
-      var jumpTimerStart, jumpAmount;
-      var spacePushed = false;
-      var chargeLabel = null;
-
-      var score = 0;
-      var scoreLabel = new ex.Label("Score: " + score, 5, 20);
-      scoreLabel.font = '20px sans-serif';
-      scoreLabel.color = ex.Color.Red;
-
-      var chargeBars = [];
-
-      jumper.rise = function(amount){
-        jumper.y -= amount;
-      }
-
-      jumper.fall = function(amount){
-        jumper.y += amount;
-      }
-
-      jumper.isOnGround = function(){
-        return (jumper.y + 20 === ground.y);
-      }
-
-      jumper.addEventListener('collision', function(evt){
-        if(evt.other instanceof Goal){
-          score += 1;
-          evt.other.kill();
-          generateGoal();
-        }
-      });
-
-      jumper.addEventListener('left', function(){
-        moveLeft();
-      });
-
-      jumper.addEventListener('right', function(){
-        moveRight();
-      });
-
-      function moveRight(){
-        if (!jumper.isOnGround() && jumper.x + 5 < game.width - 15) {
-          jumper.x += 5;
-        }
-      }
-
-      function moveLeft(){
-        if (!jumper.isOnGround() && jumper.x - 5 > -5) {
-          jumper.x -= 5;
-        }
-      }
-
-      jumper.addEventListener('keydown', function(evt){
-        if (evt.key == ex.InputKey.Space){
-          startCharge();
-        }
-      });
-
-      ex.TouchStart = function(evt){
-        startCharge();
-      };
-
-      ex.TouchEnd = function(evt){
-        endCharge();
-      };
-
-      jumper.addEventListener('keyup', function(evt){
-        if (evt.key == ex.InputKey.Space) {
-          endCharge();
-        }
-      });
-
-      function startCharge(){
-        var d = new Date();
-        jumpTimerStart = d.getTime();
-        spacePushed = true;
-      }
-
-      window.ondevicemotion = function(event) {
-        var accelerationX = event.accelerationIncludingGravity.x;
-        if (accelerationX > 0) {
-          moveRight();
-        }
-        else {
-          moveLeft();
-        }
-      }
-
-      function endCharge(){
-        if (jumper.isOnGround() && jumpTimerStart !== null){
-          var d = new Date();
-          var timeJumping = d.getTime() - jumpTimerStart;
-
-          spacePushed = false;
-          jumpAmount = timeJumping / 7;
-          jumpTimerStart = null;
-
-          chargeBars.forEach(function(bar){
-            bar.kill();
-          });
-          chargeBars = [];
-        }
-      }
-
-      function calcChargeBarYOffset(barArray){
-        var offset = ground.y + JUMPER_HEIGHT;
-        if (barArray.length > 0){
-          offset = barArray[barArray.length - 1].y + 20;
-        }
-
-        return offset;
-      }
-
-      function randInt(lowerBound, upperBound){
-        return Math.floor((Math.random() * upperBound) + lowerBound);
-      }
-
-      function generateGoal() {
-        var goal = new Goal(randInt(0, game.width - JUMPER_WIDTH), randInt(20, ground.y - ground.height - 20), JUMPER_WIDTH, JUMPER_HEIGHT, ex.Color.Green);
-        game.addChild(goal);
-      }
-
-      game.addEventListener('update', function(evt){
-        if (spacePushed && jumper.isOnGround()) {
-          var d = new Date();
-          var timeJumping = d.getTime() - jumpTimerStart;
-
-          var numChargeBars = timeJumping / 500;
-          if (numChargeBars > chargeBars.length){
-            var yOffset = calcChargeBarYOffset(chargeBars);
-            var bar = new ex.Actor(jumper.x - jumper.width / 2, yOffset, 40, 10, ex.Color.Green);
-            chargeBars.push(bar);
-            game.addChild(bar);
-          }
-        }
-
-        if(jumpAmount > 0) {
-          jumper.rise(30);
-          jumpAmount -= 30;
-        }
-        else if (!jumper.isOnGround()){
-          jumper.fall(3)
-        }
-      });
-
-      scoreLabel.addEventListener('update', function(evt){
-        this.text = "Score: " + score;
-      });
-
-      // Add an jumper to the current scene
-      game.addChild(jumper);
-      game.addChild(ground);
-      game.addChild(scoreLabel);
-
-      generateGoal();
-
-      // Start the game
-      game.start();
-   </script>
+   <script type="text/javascript" src="src/bower_components/excalibur/dist/Excalibur.js"></script>
+   <script type="text/javascript" src="src/config.js"></script>
+   <script type="text/javascript" src="src/utils.js"></script>
+   <script type="text/javascript" src="src/actors.js"></script>
+   <script type="text/javascript" src="src/game.js"></script>
 </body>
 </html>
