--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
 <head></head>
 <body>
+  <a href="https://github.com/mralexlau/Excalibur-Jumper"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
+
   How to play:
   <ul>
     <li>Try to jump and hit as many green blocks as possible.</li>
@@ -12,7 +14,6 @@
   <div>
     Playing on an iphone? Check out the <a href="/Excalibur-Jumper/mobile.html">mobile version</a>.
   </div>
-  <br>
 
    <script type="text/javascript" src="src/bower_components/excalibur/dist/Excalibur.js"></script>
    <script type="text/javascript" src="src/config.js"></script>
