--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     Playing on an iphone? Check out the <a href="/Excalibur-Jumper/mobile.html">mobile version</a>.
   </div>
 
-   <script type="text/javascript" src="src/bower_components/excalibur/dist/Excalibur.js"></script>
+   <script type="text/javascript" src="bower_components/excalibur/dist/excalibur-0.2.5.js"></script>
    <script type="text/javascript" src="src/config.js"></script>
    <script type="text/javascript" src="src/utils.js"></script>
    <script type="text/javascript" src="src/actors.js"></script>
+   <script type="text/javascript" src="src/base-level.js"></script>
    <script type="text/javascript" src="src/game.js"></script>
 </body>
 </html>
