--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
   How to play:
   <ul>
-    <li>Try to jump and hit as many green blocks as possible.</li>
+    <li>Collect the coins!</li>
     <li>Press Space to jump.</li>
     <li>The longer you hold down Space, the higher you jump.</li>
     <li>Use the left and right arrow keys to move while you're jumping.</li>
