Add touch event for mobile version.

--- a/mobile.html
+++ b/mobile.html
@@ -20,6 +20,14 @@
         jumper.moveLeft();
       }
     }
+
+    ex.TouchStart = function(evt) {
+      jumper.startCharge();
+    };
+
+    ex.TouchEnd = function(evt) {
+      jumper.endCharge();
+    };
    </script>
 </body>
 </html>
