--- a/mobile.html
+++ b/mobile.html
@@ -7,27 +7,6 @@
    <script type="text/javascript" src="src/actors.js"></script>
    <script type="text/javascript" src="src/base-level.js"></script>
    <script type="text/javascript" src="src/game.js"></script>
-
-
-
-   <script type="text/javascript">
-    window.ondevicemotion = function(event) {
-      var accelerationX = event.accelerationIncludingGravity.x;
-      if (accelerationX > 0) {
-        jumper.moveRight();
-      }
-      else {
-        jumper.moveLeft();
-      }
-    }
-
-    ex.TouchStart = function(evt) {
-      jumper.startCharge();
-    };
-
-    ex.TouchEnd = function(evt) {
-      jumper.endCharge();
-    };
-   </script>
+   <script type="text/javascript" src="src/mobile.js"></script>
 </body>
 </html>
