Add timer, fixes #5.

--- a/mobile.html
+++ b/mobile.html
@@ -6,6 +6,7 @@
    <script type="text/javascript" src="src/utils.js"></script>
    <script type="text/javascript" src="src/actors.js"></script>
    <script type="text/javascript" src="src/base-level.js"></script>
+   <script type="text/javascript" src="src/jumper-game.js"></script>
    <script type="text/javascript" src="src/game.js"></script>
    <script type="text/javascript" src="src/mobile.js"></script>
 </body>
