--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
    <script type="text/javascript" src="src/utils.js"></script>
    <script type="text/javascript" src="src/actors.js"></script>
    <script type="text/javascript" src="src/base-level.js"></script>
+   <script type="text/javascript" src="src/jumper-game.js"></script>
    <script type="text/javascript" src="src/game.js"></script>
 </body>
 </html>
