Allow users to start a new game, fixes #7

--- a/mobile.html
+++ b/mobile.html
@@ -7,6 +7,7 @@
    <script type="text/javascript" src="src/actors.js"></script>
    <script type="text/javascript" src="src/base-level.js"></script>
    <script type="text/javascript" src="src/jumper-game.js"></script>
+   <script type="text/javascript" src="src/labels.js"></script>
    <script type="text/javascript" src="src/game.js"></script>
    <script type="text/javascript" src="src/mobile.js"></script>
 </body>
